# suffixsort

./: README.md
cli/: Cargo.toml  README.md
core/: Cargo.toml  README.md
core/src/: lib.rs
