[package]
name = "ssort"
description = "[DEPRECATED — renamed to `invlex-cli`, binary `invlex`] CLI tool for inverse lexicographic sorting"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["x48 <x48@x48.org>"]
repository = "https://github.com/suffixsort/suffixsort"
readme = "README.md"
keywords = [
	"cli",
	"sorting",
	"inverse-sort",
	"text-processing",
	"suffix",
]
categories = [
	"text-processing",
	"command-line-utilities",
	"algorithms",
]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
rayon = "1.11.0"
suffixsort = { path = "../core", version = "0.3.1" }

[[bin]]
name = "ssort"
path = "src/main.rs"
