[package]
name = "suffixsort"
description = "[DEPRECATED — renamed to `invlex`] Library for inverse lexicographic sorting"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["x48 <x48@x48.org>"]
repository = "https://github.com/suffixsort/suffixsort"
keywords = [
	"sorting",
	"inverse-sort",
	"text-processing",
	"suffix",
]
categories = [
	"text-processing",
	"algorithms",
]

[dependencies]
rayon = "1.11.0"
unicode-normalization = "0.1.24"

[lib]
name = "suffixsort"
path = "src/lib.rs"
